Bug fixes
Fixed repeated scrolls
Fixed horizontal scroll getting stuck
Started to change footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -588,6 +588,21 @@ hr
     outline: 0;
 }
 
+.footer-links
+{
+    display: flex; 
+    justify-content: space-between; 
+    margin-top: 20px;
+}
+
+.footer-socials
+{
+    display: flex; 
+    justify-content: center;
+}
+
+.mb-0 { margin-bottom: 0; }
+
 form
 {
     margin-top: 30px;
